--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,22 @@
       <div class="desc"> But that's not the Overworld</div>
 
     </div>
-
+    <div class="container smp-par">
+      <div class="content-btn">
+      <h4>Welcome to the Dawn Forest</h4>
+      <h2>Explore the Beauty of Nature</h2>
+      <h3> Get ready for an unforgettable adventure</h3>
+      <button class="glass-btn"> More </button>
+    </div>
+    </div>
+    <div class="container section-main">
+    <div class="section">
+      <div class="box" id="box1"></div>
+      <div class="box" id="box2"></div>
+      <div class="box" id="box3"></div>
+      <div class="box" id="box4"></div>
+    </div>
+  </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
